Fri Aug  3 09:55:38 2001  Ossama Othman  <ossama@uci.edu>

	* bin/auto_run_tests.lst:

	  Added the new TAO "DLL_ORB" test to the list of tests to run.

Fri Aug  3 08:26:45 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/RW_Process_Mutex.cpp: Added a missing comma in the
	  constructor. This should fix Win32 compile errors.

Fri Aug  3 08:07:45 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/CDR_Base.cpp: Added a check for a memory allocation failure
	  in grow (). Thanks to Francis Paul <FranciP@navcanada.ca> for
	  pointing this out.

Thu Aug  2 18:37:23 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/RW_Process_Mutex.cpp: Added ACE_DEFAULT_OPEN_PERMS
	  to the constructor call to ACE_RW_Process_Mutex so that it does
 	  the right thing on Win32.  Thanks to Wayne Erchak
 	  <werchak@stentor.com> for reporting this.  This fixes
	  bugid 996.

Thu Aug 02 13:04:19 2001  Steve Huston  <shuston@riverace.com>

        * ace/ace.icc: Added Intrusive_List.cpp to the TEMPLATE_FILES
          section.

Thu Aug 02 06:59:39 2001  Steve Huston  <shuston@riverace.com>

        * ace/Basic_Types.h (ACE_SIZEOF_WCHAR): If ACE_HAS_XPG4_MULTIBYTE_CHAR
          is defined, use sizeof(wchar_t) to set ACE_SIZEOF_WCHAR.

Wed Aug  1 16:05:49 2001  Carlos O'Ryan  <coryan@uci.edu>

        * Merged changes from the fix_886 branch

        Tue Jul 31 09:17:49 2001  Carlos O'Ryan  <coryan@uci.edu>

        * ace/Intrusive_List.h:
        * ace/Intrusive_List.inl:
          Add new methods to access the head and tail of the list.

        * ace/Intrusive_List.cpp:
          Fixed the implementation of remove(), if the element to be
          removed was the last on the list it wasn't removed at all.
          Left some code to check invariants, have to find a way to keep
          that code around with some optional compilation flags.

        Thu Jul 26 16:50:54 2001  Carlos O'Ryan  <coryan@uci.edu>

        * ace/Makefile:
        * ace/Makefile.am: